...
                VStack(alignment: .center) {
                    Label("Employee Name", systemImage: "person.fill")
                        .font(.title)
                        //.foregroundColor(.secondary)
                        .multilineTextAlignment(.leading)
                    HStack {
                        TextField("Given Name", text: $firstName)
                            .disableAutocorrection(true)
                            .accessibilityLabel("Given Name")
                            .accessibilityIdentifier(
                                UIIdentifiers.EmployeeView.firstNameTextField
                            )
                        TextField("Family Name", text: $lastName)
...
